hidden picket date and time

--- a/style.css
+++ b/style.css
@@ -227,3 +227,12 @@ footer button {
 
   color: #FFFFFF;
   }
+
+
+  input[type="date"]::-webkit-calendar-picker-indicator {
+    display: none;
+  }
+  
+  input[type="time"]::-webkit-calendar-picker-indicator {
+    display: none;
+  }
